--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,18 @@ div.main-start {
     justify-content: space-between;
 }
 
+.modalLogin .header button.btnBack {
+    font-size: 1.6rem;
+    background: none;
+    border: none;
+}
+
+.modalLogin .header button.btnCad {
+    background: none;
+    border: none;
+    font-size: 1.2rem;
+}
+
 .modalContent {
     background: #fff;
     position: fixed;
@@ -189,5 +201,28 @@ div.main-start {
     background: #e7f0f3;
     border: none;
     border-radius: 0.3rem;
-    padding: 0.2rem;
+    padding: 0.2rem 0.2rem 0.2rem 0.6rem;
+}
+
+.modalContent a {
+    text-decoration: none;
+    color: black;
+    margin: 0.6rem;
+    font-size: 1.1rem;
+}
+
+.modalContent button.logar {
+    margin: 0.4rem 0.4rem 0.4rem 0rem;
+    padding: 0.4rem;
+    border: none;
+    border-radius: 1rem;
+    width: 6rem;
+    height: 2.3rem;
+    background: #000;
+    color: #fff;
+    font-size: 1.13rem;
+}
+
+@media screen  {
+    
 }
